--- a/ASQ_pilot/PainAlc_PilotData_2019_04_09.Rmd
+++ b/ASQ_pilot/PainAlc_PilotData_2019_04_09.Rmd
@@ -6,13 +6,13 @@ modified: "09/04/2019"
 modified: "10/04/2019"
 output: html_document
 ---
-## R Markdown
+## R Markdown setup
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-To begin, one has to have an idea of what packages R will need to load to accomplish your goals. The packages below are the ones used in this example.
+To begin, one has to have an idea of what packages R will need to load to accomplish your goals. The packages below are the ones I will need to analyze the pilot data.
 
 ```{r}
 library(readxl) # This is used to import data from excel
@@ -36,26 +36,26 @@ setwd("/Users/jcraggs/Box Sync/Grants/Alcohol_Pain/ASQ_pilot/")
 
 ```
 
-## IMPORT DATA
+## IMPORT DATA FOR THE PILOT ANALYSES
 ```{r}
 #Read Data
 # Data exported from RedCap on April 4, 2019
 #data=read.csv('ImagingPsychometrics_DATA_2019-04-04_1240.csv')
 #data2=read.csv('ImagingPsychometrics_DATA_2019-04-04_1240.csv')
-data=read.csv("ASQ_pilot_2019_04_09.csv", header = TRUE)
+data_ORIG=read.csv("ASQ_pilot_2019_04_09.csv", header = TRUE)
 data2=read.csv("ASQ_pilot_2019_04_09.csv", header = TRUE)
-tbl_df(data2)
+#tbl_df(data2)
 #View(data2)
 ```
 
-
 ## SORT DATA BY A VARIABLE
 ```{R}
-# IN THIS DATA SET BOTH COMMANDS SORT THE DATA AND PRODUCE THE SAME RESULT
+#	BOTH COMMANDS SORT THE DATA AND PRODUCE THE SAME RESULT
 arrange(data2, Count)
-arrange(data2, participant_id)
+#	arrange(data2, participant_id)
 ```
-## EDIT DATA v1
+
+## EDIT DATA v1 - not using this code as of April 10, 2019
 ```{r}
 # edit(data2)
 # select(data2, everything())
@@ -76,7 +76,7 @@ data3[data3$participant_id == "IP183", "max.temp"] <- 48
 ## EDIT DATA v2
 ```{r}
 #	CORRECTING AN ERROR IN THE MAX TEMP OF THREE SUBJECTS
-#	CHANGING THE VALUE
+#	CHANGING THE max.temp VALUE 
 data2[data2$participant_id == "IP005", "max.temp"] <- 50
 data2[data2$participant_id == "IP168", "max.temp"] <- 50
 data2[data2$participant_id == "IP183", "max.temp"] <- 48
@@ -97,6 +97,37 @@ rm(data2)
 #	LOADING THE NEW DATA SET
 load(file = "ASQ_pilot.RData")
 ```
+
+
+##	ADDING NEW VARIABLES
+```{r}
+#	CREATE A SMALLER DATA SET
+asq_sm <- select(data2,
+				 participant_id,
+				 starts_with("asq"),
+				 starts_with("typical"),
+				 max.temp
+				 )
+# View(asq_sm)
+
+#	COMPUTE ASQ-L VALUES
+mutate(asq_sm, asq_l = mean(asq_1a + asq_2a)
+	   )
+#	ADD THE NEW VARIABLE TO THE SMALLER DATA SET
+asq_sm <-  mutate(asq_sm, asq_l = mean(asq_1a + asq_2a)
+	   )
+
+```
+
+
+
+
+
+
+
+
+
+
 
 
 ## SELECTING SUBSETS OF VARIABLES
